<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_navigation"
    app:startDestination="@+id/mapScreen">

    <fragment
        android:id="@+id/mapScreen"
        android:name="com.example.navigationtestapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <argument
            android:name="place"
            android:defaultValue="@null"
            app:argType="com.example.navigationtestapp.models.Place"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nearbyScreen"
        android:name="com.example.navigationtestapp.ui.nearby.NearbyPlacesFragment"
        android:label="@string/title_nearby"
        tools:layout="@layout/fragment_nearby_places">
        <action
            android:id="@+id/action_nearby_to_place_detail"
            app:destination="@id/placeDetailScreen">
            <argument
                android:name="place"
                app:argType="com.example.navigationtestapp.models.Place" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/placeDetailScreen"
        android:name="com.example.navigationtestapp.ui.place.PlaceDetailsFragment"
        android:label="@string/title_place_detail"
        tools:layout="@layout/fragment_place_detail">
        <argument
            android:name="place"
            app:argType="com.example.navigationtestapp.models.Place" />
        <action
            android:id="@+id/action_place_details_to_write_review"
            app:destination="@id/writeReviewScreen" />
        <action
            android:id="@+id/action_place_details_to_home"
            app:destination="@id/mapScreen"
            app:launchSingleTop="true"
            app:popUpTo="@id/mapScreen"
            app:popUpToInclusive="true">
            <argument
                android:name="place"
                app:argType="com.example.navigationtestapp.models.Place" />
        </action>
    </fragment>

    <dialog
        android:id="@+id/writeReviewScreen"
        android:name="com.example.navigationtestapp.ui.place.WriteReviewFragment"
        tools:layout="@layout/fragment_write_review">
        <action
            android:id="@+id/action_write_review_to_review_sent"
            app:destination="@id/reviewSentScreen"
            app:popUpTo="@id/placeDetailScreen" />
    </dialog>

    <dialog
        android:id="@+id/reviewSentScreen"
        android:name="com.example.navigationtestapp.ui.place.ReviewSentDialog" />

    <fragment
        android:id="@+id/notificationsScreen"
        android:name="com.example.navigationtestapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notification_to_place"
            app:destination="@id/placeDetailScreen">
            <argument
                android:name="place"
                app:argType="com.example.navigationtestapp.models.Place" />
        </action>
        <action
            android:id="@+id/action_notification_to_product_detail"
            app:destination="@id/productDetailScreen" />
    </fragment>
    <fragment
        android:id="@+id/productDetailScreen"
        android:name="com.example.navigationtestapp.ui.store.ProductDetailFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

</navigation>