<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.example.navigationtestapp.viewmodel.store.ProductDetailViewModel.InstallStatus" />

        <variable
            name="product"
            type="com.example.navigationtestapp.models.Product" />

        <variable
            name="viewModel"
            type="com.example.navigationtestapp.viewmodel.store.ProductDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:padding="20dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@{product.title}"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/buttons"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@sample/products.json/products/title" />

        <TextView
            android:id="@+id/size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{product.size}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/buttons"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            tools:text="@sample/products.json/products/size" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/install_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install_button"
                android:visibility="@{safeUnbox(viewModel.installStatus == InstallStatus.NONE) ?  View.VISIBLE : View.GONE}"
                android:onClick="@{() -> viewModel.startDownload()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:visibility="@{safeUnbox(viewModel.installStatus == InstallStatus.INSTALLING) ?  View.VISIBLE : View.GONE}"
                android:onClick="@{() -> viewModel.cancelDownload()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/installed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:text="@string/installed_text"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:visibility="@{safeUnbox(viewModel.installStatus == InstallStatus.INSTALLED) ?  View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/download_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="@{safeUnbox(viewModel.installStatus == InstallStatus.INSTALLING) ?  View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@id/cancel_button"
                app:layout_constraintStart_toStartOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/cancel_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/purchase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/purchase_button"
            android:onClick="@{() -> viewModel.purchaseProduct()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttons" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>